2016-11-15  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (ee_set_core_config): Show deprecation
	warning once.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (ee_set_core_config): Fix typo in
	format string.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (gdbserver_attached_p): New
	function.
	(_e_default_start_group): Halt cores, before sending SYNC if
	EHAL_GDBSERVER env var is set.
	(static int e_halt_group): New function.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_reset_regs): Reset PC.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac (enable-esim) (pal-target): Add missing "["
	brackets.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (ee_set_core_config): Rename ...
	(_ee_set_core_config): ... to this.
	(ee_set_core_config): "New" function. Added as OMPi 2.0.0
	compatibility hack. DO NOT USE.

2016-10-06  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (native_target_ops): Fix typo
	{native_taget_ops} in definition of forward declaration.

2016-08-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_to_rank): Use
	p_coords_to_rank().
	(pal_open): Open team with 2D topology.
	(pal_close): Use p_team_size() instead of calculating team
	size manually.

2016-07-23  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_close): Replace p_wait() call
	with call to p_kill().

2016-07-23  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_load_group): Fix range bug.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_load_group): Call p_run() with
	P_RUN_PREPARE flag.
	(pal_start_group): Call P_RUN with P_RUN_PREPARED flag.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_populate_platform): Query device
	parameters from PAL.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_to_rank): Implement.