@@ -32,6 +32,13 @@ extern "C" {
 
 #include "e_types.h"
 
+
+/* This is the type the compiler expect for functions with the
+ * interrupt attribute  */
+typedef void (*e_irqhandler_t)(void);
+
+/* "Legacy" support. Argument will be bogus. signalhandler_t is defined in
+ * <signal.h> so we couldn't change the prototype even if we wanted to.  */
 typedef void (*sighandler_t)(int);
 
 typedef enum {
@@ -47,7 +54,10 @@ typedef enum {
 } e_irq_type_t;
 
 
-void e_irq_attach(e_irq_type_t irq, sighandler_t handler);
+void e_irq_attach(e_irq_type_t irq, e_irqhandler_t handler);
+/* Support sighandler_t without giving type warnings */
+#define e_irq_attach(i, h) e_irq_attach((i), (e_irqhandler_t) (h))
+
 void e_irq_set(unsigned row, unsigned col, e_irq_type_t irq);
 void e_irq_clear(unsigned row, unsigned col, e_irq_type_t irq);
 void e_irq_global_mask(e_bool_t state);
